# dados-de-compras

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requiriments.txt
docs/: API_COMPRAS_GOV.md
src/compras_crawler/: __init__.py  cli.py  client.py  log.py  manifest.py  normalize.py  storage.py  sync.py  ui.py
tests/: test_cli.py  test_client.py  test_manifest.py  test_normalize.py  test_storage.py  test_sync.py  test_ui.py
